--- a/docs/TeXFiles/110_Anhang.tex
+++ b/docs/TeXFiles/110_Anhang.tex
@@ -1,6 +1,85 @@
 \chapter{Anhang}
 \label{ch:Anhang}
 
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Empty_World.png}
+        \caption{Empty World}
+        \label{fig:empty_world}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/The_Wall.png}
+        \caption{The Wall}
+        \label{fig:the_wall}
+    \end{subfigure}
+    \vfill
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Narrow_Passage.png}
+        \caption{Narrow Passage}
+        \label{fig:narrow_passage}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Forest.png}
+        \caption{Forest}
+        \label{fig:forest}
+    \end{subfigure}
+    \vfill
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Shelf_Reach.png}
+        \caption{Shelf Reach}
+        \label{fig:shelf_reach}
+    \end{subfigure}
+    \caption{Benchmarks / Planungsumgebungen}
+    \label{fig:planungsumgebungen}
+\end{figure}
+
+
+\begin{figure}
+    \centering
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Empty_World_benchmark_multiRun.png}
+        \caption{Empty World}
+        \label{fig:empty_world_bench_multi}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/The_Wall_benchmark_multiRun.png}
+        \caption{The Wall}
+        \label{fig:the_wall_bench_multi}
+    \end{subfigure}
+    \vfill
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Narrow_Passage_benchmark_multiRun.png}
+        \caption{Narrow Passage}
+        \label{fig:narrow_passage_bench_multi}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Forest_benchmark_multiRun.png}
+        \caption{Forest}
+        \label{fig:forest_bench_multi}
+    \end{subfigure}
+    \newpage
+    \begin{subfigure}[b]{0.40\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Shelf_Reach_benchmark_multiRun.png}
+        \caption{Shelf Reach}
+        \label{fig:shelf_reach_bench_multi}
+    \end{subfigure}
+\end{figure}
+
 
 
 
