--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -400,9 +400,9 @@
 	\input{TeXFiles/040_theoretErweiterungen}
 	% \input{TeXFiles/100_Zusammenfassung}
 
-	% \begin{appendix}
-	% 	\input{TeXFiles/110_Anhang}
-	% \end{appendix}
+	\begin{appendix}
+		\input{TeXFiles/110_Anhang}
+	\end{appendix}
 	
 	\clearpage
 
