Added new information

--- a/docs/TeXFiles/000_Settings.tex
+++ b/docs/TeXFiles/000_Settings.tex
@@ -3,16 +3,16 @@
 \newcommand{\NameB}{Tim Schäfer, B. Eng}
 \newcommand{\StudentIdB}{scti1057 / Matrikelnr. 71606}
 \newcommand{\NameC}{Felix Wietschel, B. Eng}
-\newcommand{\StudentIdC}{scti1057 / Matrikelnr. xxxxx}
+\newcommand{\StudentIdC}{scti1057 / Matrikelnr. 74940}
 \newcommand{\ThesisTitle}{Projektaufgabe Roboterprogrammierung}
 \newcommand{\ThesisTitleShort}{Mobiler Manipulator}
 \newcommand{\ThesisSubtitle}{Mobiler Manipulator}
-\newcommand{\Subject}{Roboterprogrammierung - Wintersemester 25/26}
-\newcommand{\Supervisor}{Prof. Dr.-Ing. Björn Hein}
+\newcommand{\Subject}{Roboterprogrammierung --~Wintersemester 25/26}
+\newcommand{\Supervisor}{Prof.~Dr.-Ing. Björn Hein}
 \newcommand{\Faculty}{Fakultät für Maschinenbau und Mechatronik}
 \newcommand{\University}{Hochschule Karlsruhe}
 \newcommand{\UniversityLocation}{Karlsruhe}
-\newcommand{\ThesisDeliveryDate}{xx. xx. xxxx}
+\newcommand{\ThesisDeliveryDate}{20.~Januar.~2026}
 \newcommand{\CompanyName}{NoCompanyInvolved}  % don't modify this line, if no company is involved
 
 %\renewcommand{\theenumi}{\textbf{(\alph*{enumi})}} % Setze die Aufzählung auf fett
