Added lazyPRM and visibiltyPRM

--- a/docs/TeXFiles/004_Acronyms.tex
+++ b/docs/TeXFiles/004_Acronyms.tex
@@ -2,5 +2,7 @@
 \chapter*{Abkürzungsverzeichnis}
 \begin{acronym}[LONG]
 	\acro{DUT}{Device under Test}
+	\acro{LazyPRM}{Lazy Probabilistic Roadmap Method}
+	\acro{VisibilityPRM}{Visibility Probabilistic Roadmap Method}
 \end{acronym}
 %% End of File %%
