Enhance figures in appendix for multi-run results and collision checks

--- a/docs/TeXFiles/110_Anhang.tex
+++ b/docs/TeXFiles/110_Anhang.tex
@@ -1,87 +1,157 @@
 \chapter{Anhang}
 \label{ch:Anhang}
 
+\section{Planungsumgebungen}
+\label{sec:planungsumgebungen}
+% --- TEIL 1 ---
 \begin{figure}[H]
     \centering
-    \begin{subfigure}[b]{0.40\textwidth}
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Figures/png/Empty_World.png}
         \caption{Empty World}
         \label{fig:empty_world}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[b]{0.40\textwidth}
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Figures/png/The_Wall.png}
         \caption{The Wall}
         \label{fig:the_wall}
     \end{subfigure}
-    \vfill
-    \begin{subfigure}[b]{0.40\textwidth}
+    
+    \vspace{1em}
+    
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Figures/png/Narrow_Passage.png}
         \caption{Narrow Passage}
         \label{fig:narrow_passage}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[b]{0.40\textwidth}
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Figures/png/Forest.png}
         \caption{Forest}
         \label{fig:forest}
     \end{subfigure}
-    \vfill
-    \begin{subfigure}[b]{0.40\textwidth}
+    \caption{Benchmarks / Planungsumgebungen}
+    \label{fig:planungsumgebungen}
+\end{figure}
+
+% --- TEIL 2 ---
+\begin{figure}[H]
+    \ContinuedFloat
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Figures/png/Shelf_Reach.png}
         \caption{Shelf Reach}
         \label{fig:shelf_reach}
     \end{subfigure}
-    \caption{Benchmarks / Planungsumgebungen}
-    \label{fig:planungsumgebungen}
+    \caption[]{Benchmarks / Planungsumgebungen (Fortsetzung)}
 \end{figure}
 
+\clearpage
 
-\begin{figure}
+\section{Ergebnisse Multi-Run MIT Überprüfung der Eigenkollision}
+\label{sec:erg_multiRun_SelfCheck}
+% --- TEIL 1 ---
+\begin{figure}[H]
     \centering
-    \begin{subfigure}[b]{0.40\textwidth}
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Figures/png/Empty_World_benchmark_multiRun.png}
+        \includegraphics[width=\textwidth]{Figures/png/Empty_World_benchmark_multiRun_SelfCheck.png}
         \caption{Empty World}
         \label{fig:empty_world_bench_multi}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[b]{0.40\textwidth}
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Figures/png/The_Wall_benchmark_multiRun.png}
+        \includegraphics[width=\textwidth]{Figures/png/The_Wall_benchmark_multiRun_SelfCheck.png}
         \caption{The Wall}
         \label{fig:the_wall_bench_multi}
     \end{subfigure}
-    \vfill
-    \begin{subfigure}[b]{0.40\textwidth}
+    
+    \vspace{1em}
+    
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Figures/png/Narrow_Passage_benchmark_multiRun.png}
+        \includegraphics[width=\textwidth]{Figures/png/Narrow_Passage_benchmark_multiRun_SelfCheck.png}
         \caption{Narrow Passage}
         \label{fig:narrow_passage_bench_multi}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[b]{0.40\textwidth}
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Figures/png/Forest_benchmark_multiRun.png}
+        \includegraphics[width=\textwidth]{Figures/png/Forest_benchmark_multiRun_SelfCheck.png}
         \caption{Forest}
         \label{fig:forest_bench_multi}
     \end{subfigure}
-    \newpage
-    \begin{subfigure}[b]{0.40\textwidth}
+    \caption{Ergebnisse Multi-Run mit Überprüfung der Eigenkollision}
+\end{figure}
+
+% --- TEIL 2 ---
+\begin{figure}[H]
+    \ContinuedFloat
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Figures/png/Shelf_Reach_benchmark_multiRun.png}
+        \includegraphics[width=\textwidth]{Figures/png/Shelf_Reach_benchmark_multiRun_SelfCheck.png}
         \caption{Shelf Reach}
         \label{fig:shelf_reach_bench_multi}
     \end{subfigure}
+    \caption[]{Ergebnisse Multi-Run mit Überprüfung der Eigenkollision (Fortsetzung)}
 \end{figure}
 
+\clearpage
 
+\section{Ergebnisse Multi-Run OHNE Überprüfung der Eigenkollision}
+\label{sec:erg_multiRun_noSelfCheck}
+% --- TEIL 1 ---
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Empty_World_benchmark_multiRun_noSelfCheck.png}
+        \caption{Empty World}
+        \label{fig:empty_world_bench_multi_noCheck} % Label angepasst!
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/The_Wall_benchmark_multiRun_noSelfCheck.png}
+        \caption{The Wall}
+        \label{fig:the_wall_bench_multi_noCheck} % Label angepasst!
+    \end{subfigure}
+    
+    \vspace{1em}
+    
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Narrow_Passage_benchmark_multiRun_noSelfCheck.png}
+        \caption{Narrow Passage}
+        \label{fig:narrow_passage_bench_multi_noCheck} % Label angepasst!
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Forest_benchmark_multiRun_noSelfCheck.png}
+        \caption{Forest}
+        \label{fig:forest_bench_multi_noCheck} % Label angepasst!
+    \end{subfigure}
+    \caption{Ergebnisse Multi-Run ohne Überprüfung der Eigenkollision}
+\end{figure}
 
-
-
-%% End of File %%
+% --- TEIL 2 ---
+\begin{figure}[H]
+    \ContinuedFloat
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{Figures/png/Shelf_Reach_benchmark_multiRun_noSelfCheck.png}
+        \caption{Shelf Reach}
+        \label{fig:shelf_reach_bench_multi_noCheck} % Label angepasst!
+    \end{subfigure}
+    \caption[]{Ergebnisse Multi-Run ohne Überprüfung der Eigenkollision (Fortsetzung)}
+\end{figure}
