--- a/docs/TeXFiles/004_Acronyms.tex
+++ b/docs/TeXFiles/004_Acronyms.tex
@@ -4,5 +4,6 @@
 	\acro{DUT}{Device under Test}
 	\acro{LazyPRM}{Lazy Probabilistic Roadmap Method}
 	\acro{VisibilityPRM}{Visibility Probabilistic Roadmap Method}
+	\acro{PRM}{Probabilistic Roadmap Method}
 \end{acronym}
 %% End of File %%
